--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Print it ! - Impressions d'entreprise</title>
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="script.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
@@ -23,6 +24,14 @@
 			<img class="arrow_left" src="assets/images/arrow_left.png">
 			<img class="arrow_right" src="assets/images/arrow_right.png">
 		<div class="dots">
+			<div class="dot"></div>
+			<div class="dot_selected"></div>
+			<div class="dot"></div>
+			<div class="dot_selected"></div>
+			<div class="dot"></div>
+			<div class="dot_selected"></div>
+			<div class="dot"></div>
+			<div class="dot_selected"></div>
 		</div>
 	</div>
 	<section id="about-us" class="container">
